# progress-project-bot

./: .gitignore  README.md  alembic.ini  docker-compose.yaml  pyproject.toml
src/: config.py  logger.py  logger_config.py  main.py
src/bot/filters/: __init__.py  active_subscription.py
src/bot/handlers/: main_menu.py  new_registration_dialog.py  payment_dialog.py  profile_dialog.py  registration_dialog.py  start_bot.py  test_workouts.py  user_settings.py  utils.py  workout_calendar.py  workout_of_the_day.py  workouts_for_start_program.py
src/bot/keyboards/: main_menu.py  subscription.py  user_settings.py  utils.py
src/constants/: biometrics.py  sinkler_coefficients.py  test_weeks.py  warm_ups.py
src/dao/: __init__.py  base.py  biometrics.py  payment.py  profile.py  settings.py  start_workout.py  subscription.py  test_workout.py  user.py  workout.py
src/database/: config.py
src/database/migrations/: env.py
src/database/migrations/versions/: 20250207_2156_initial_migration.py  (+11 more)
src/database/models/: __init__.py  biometrics.py  curator.py  payment.py  profile.py  results.py  settings.py  subscription.py  user.py  workout.py  workouts.py  workouts_start_program.py  workouts_test_weeks.py
src/middleware/: database_middleware.py
src/schemas/: __init__.py  biometrics.py  coefficent.py  payment.py  profile.py  subscription.py  test_workout.py  user.py
src/services/: test_week_access.py
src/services/registration/: controller.py  validation.py
src/utils/: coefficient.py  emojis.py  profile.py  start_workouts.py  workout_hashtags.py
