[project]
name = "progress-project-bot"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.14.1",
    "asyncpg>=0.30.0",
    "pydantic>=2.10.6",
    "pydantic-settings>=2.7.1",
    "python-dotenv>=1.0.1",
    "sqlalchemy>=2.0.38",
]

[dependency-groups]
dev = [
    "isort>=6.0.0",
    "pre-commit>=4.1.0",
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.3",
    "pytest-mock>=3.14.0",
    "ruff>=0.9.6",
]

[tool.ruff]
target-version = "py312"
exclude = ["src/database/migrations/"]
fix = true
line-length = 100

[tool.ruff.lint]
select = [
    "E", "F", "I",
    "B",
    "I",
    "PL",
    "UP",
    "RUF"
]
ignore = ["E501", "RUF001"]

[tool.isort]
profile = "black"
known_third_party = ["aiogram", "sqlalchemy", "pydantic", "asyncpg", "aiohttp", "fastapi"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
src_paths = ["src"]
lines_after_imports = 2
force_sort_within_sections = true
skip_glob = ["src/database/migrations/*"]
